--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,8 @@
 @import './components/register-button';
 @import './components/hero';
 @import './components/ausg';
+@import './components/awskrug';
+@import './components/hackathon';
 
 body {
   -webkit-font-smoothing: antialiased;
