--- a/styles/components/_ausg.scss
+++ b/styles/components/_ausg.scss
@@ -24,7 +24,7 @@
 }
 
 .ausg-activities {
-  color: #FF9900;
+  color: #f90;
   line-height: 166%;
   padding-left: 7rem;
   width: 40%;
@@ -42,79 +42,79 @@
 
 .ausg-activities-background {
   background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, .2));
-  width: 33%;
   height: 17rem;
+  margin-bottom: -6rem;
   position: relative;
   top: -10rem;
+  width: 33%;
   z-index: -1;
-  margin-bottom: -6rem;
   @include mq($until: medium) {
     width: 66%;
   }
 }
 
 .ausg-photo-1 {
-  background-size: cover;
-  background-position: 50% 50%;
   background-image: url('../assets/ausg-photo-1.jpg');
-  position: absolute;
-  width: 50%;
+  background-position: 50% 50%;
+  background-size: cover;
   height: 20rem;
-  top: 3.5rem;
+  position: absolute;
   right: 8rem;
+  top: 3.5rem;
+  width: 50%;
   // transform: translateX(3.5rem);
   @include mq($until: xlarge) {
     right: 0;
   }
   @include mq($until: medium) {
-    position: relative;
-    top: 0;
     left: 0;
     margin: 0 0 4rem;
+    position: relative;
+    top: 0;
     // margin-bottom: 4rem;
     width: 100%;
     // transform: translateX(-2rem);
   }
 }
 .ausg-photo-2 {
-  background-size: cover;
-  background-position: 50% 50%;
   background-image: url('../assets/ausg-photo-2.jpg');
-  position: absolute;
-  width: 40%;
+  background-position: 50% 50%;
+  background-size: cover;
   height: 23.5rem;
-  top: 20rem;
+  position: absolute;
   right: 5rem;
+  top: 20rem;
+  width: 40%;
   @include mq($until: xlarge) {
     right: 0;
   }
   @include mq($until: medium) {
-    position: relative;
-    top: 0;
     left: 0;
     margin-bottom: 4rem;
+    position: relative;
+    top: 0;
     width: 100%;
     // transform: translateX(0);
   }
 }
 .ausg-photo-3 {
-  background-size: cover;
-  background-position: 50% 50%;
   background-image: url('../assets/ausg-photo-3.jpg');
-  position: absolute;
-  width: 50%;
+  background-position: 50% 50%;
+  background-size: cover;
   height: 20rem;
-  top: 40rem;
   left: 10rem;
+  position: absolute;
+  top: 40rem;
+  width: 50%;
   @include mq($until: xlarge) {
     left: 4rem;
     width: 66%;
   }
   @include mq($until: medium) {
-    position: relative;
-    top: 0;
     left: 0;
     margin-bottom: 4rem;
+    position: relative;
+    top: 0;
     width: 100%;
     // transform: translateX(-2rem);
   }
