--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -1,14 +1,14 @@
 .hero {
-  width: 100%;
   height: 100%;
   position: relative;
+  width: 100%;
   &__container {
+    left: 50%;
     padding: 2rem;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
+    top: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
   }
   img {
@@ -17,7 +17,7 @@
     width: 100%;
   }
   label {
-    color: #868E96;
+    color: #868e96;
     display: block;
     font-size: .8rem;
     margin-top: 3rem;
