--- a/styles/components/_register-button.scss
+++ b/styles/components/_register-button.scss
@@ -1,33 +1,33 @@
 .register-button {
   align-items: center;
   background-color: #212529;
-  bottom: 1rem;
   border-radius: .5rem;
+  bottom: 1rem;
   cursor: pointer;
   display: flex;
+  justify-content: center;
+  left: 50%;
+  max-width: 12rem;
   padding: .85rem;
   position: fixed;
-  left: 50%;
   transform: translate(-50%, 0);
   transition: .4s;
   width: 100%;
-  max-width: 12rem;
   // max-width: 100%;
-  justify-content: center;
   &:hover {
     box-shadow: 0 .5rem 1rem 0 rgba(0, 0, 0, .2);
     transform: translate(-50%, -.5rem);
   }
   svg {
-    fill: #ADB5BD;
+    fill: #adb5bd;
+    height: 100%;
     margin-right: .6rem;
     max-height: 1.2rem;
     max-width: 1.2rem;
     width: 100%;
-    height: 100%;
   }
   label {
-    color: #ADB5BD;
+    color: #adb5bd;
     cursor: pointer;
     font-size: 1.05rem;
   }
