--- a/styles/main.scss
+++ b/styles/main.scss
@@ -10,7 +10,7 @@
 
 body {
   -webkit-font-smoothing: antialiased;
-  background-color: #343A40;
+  background-color: #343a40;
   font-family: -apple-system, BlinkMacSystemFont, 'Malgun Gothic', 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 16px;
 }
