--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,7 +6,7 @@
 @import './components/hero';
 @import './components/awskrug';
 @import './components/ausg';
-@import './components/hackathon';
+@import './components/amathon';
 
 body {
   -webkit-font-smoothing: antialiased;
